
This is a list of API changes in SDL's version history.

Version 1.0:

1.2.16:  This is mostly multiple bug fixes since the previous version.
Changes include:
- Audio, wav loader: security fixes for ADPCM decoding (CVE-2019-7572,
  CVE-2019-7573, CVE-2019-7574, CVE-2019-7575, CVE-2019-7576,
  CVE-2019-7577, CVE-2019-7578 -- bugs 4490, 4491, 4492, 4493, 4494,
  4495, 4496, and 4522.)
- Video, bmp loader:  security fixes for CVE-2019-7635, CVE-2019-7636,
  CVE-2019-7638, CVE-2019-13616 (bugs 4498, 4499, 4500, 4517 and 4538.)
- Video, blit: fix handling of alpha channel in Altivec accelerated
  blit functions (bug 1424.)
- Video, blit: correct vec_perm() application on little-endian 64-bit
  PowerPC (bug 4791. cf.: RedHat bug 1392465.)
- Video, blit: use fast path for RGB 565 -> 32-bit XRGB 8888
- Video, blit: backport fast paths for 24/32-bit blitting from SDL2
  (bug 5328)
- Video, blit: fix RGBA<->RGBA blit broken with the optimization from
  bug 11 (bug 2976.)
- Video, blit, Linux: ARM assembly to address performance of blit and
  fill routines - thanks to Ben Avison. (bug 4365.)
- Video: fix integer overflow in SDL_CalculatePitch (CVE-2019-7637,
  bug 4497.)
- Video, Linux, fbcon: fix double buffering with non-fullscreen
  resolution, implement triple-buffering and other improvements,
  thanks to Paul Cercueil.
- Mouse: fix SDL_ResetMouse() using a bogus mouse button causing a
  negative shift (bug 3593.)
- Cdrom: fix SDL_CDResume() and SDL_CDStop() not returning failure
  when they should (bug 4108.)
- Unix, pthread: Fix SDL_SemWaitTimeout() returning -1 instead of
  SDL_MUTEX_TIMEDOUT upon timeout (bug 1426.)
- NetBSD: wscons support.
- NetBSD, audio: use AUDIO_GETBUFINFO when available.
- OpenBSD, audio: add sndio support.
- Haiku/BeOS, audio: fix error in buffer size setting (bug 1679.)
- OpenBSD: fix dynamic loading of X and OpenGL libs (bugs 1434, 5208.)
- X11video: fix missing symbol X11_KeyToUnicode in .so file (bug 1390.