@@ -9,6 +9,10 @@ Changes include:
   CVE-2019-7573, CVE-2019-7574, CVE-2019-7575, CVE-2019-7576,
   CVE-2019-7577, CVE-2019-7578 -- bugs 4490, 4491, 4492, 4493, 4494,
   4495, 4496, and 4522.)
+- Video: fix dynamic bpp-target when checking for supported video modes
+  (github PR/855.)
+- Video, X11: fix crashes with certain libGL implementations and thread
+  issues -- add XInitThreads to X11_CreateDevice (bug 2843.)
 - Video, bmp loader:  security fixes for CVE-2019-7635, CVE-2019-7636,
   CVE-2019-7638, CVE-2019-13616 (bugs 4498, 4499, 4500, 4517 and 4538.)
 - Video, blit: fix handling of alpha channel in Altivec accelerated
@@ -27,6 +31,10 @@ Changes include:
 - Video, Linux, fbcon: fix double buffering with non-fullscreen
   resolution, implement triple-buffering and other improvements,
   thanks to Paul Cercueil.
+- Video, WINCE: fix build with Embedded Visual Studio (github bug 846.)
+- Video, WINCE: fix detection of screen rotation (github bug 847.)
+- Video, WINCE: added support for hardware application keys (github bug
+  850.)
 - Mouse: fix SDL_ResetMouse() using a bogus mouse button causing a
   negative shift (bug 3593.)
 - Cdrom: fix SDL_CDResume() and SDL_CDStop() not returning failure
@@ -60,6 +68,7 @@ Changes include:
 - Mac OS X: fix build for 10.9 Mavericks or newer (bug 2085.)
 - Mac OS X, Quartz: fix cursor transparency (bug 4076.)
 - Mac OS X, joystick: update to support Saitek p2500 gamepad (bug 2025)
+- Mac OS X, joystick: fix keystroke receiving security popup (bug 5248)
 - Mac OS X: fixed audio on macOS 11.0 beta ("Big Sur")
 - Mac OS X, main: updates for -psn_XXX command line arg for Finder
   launches in new macOS versions.
